feat: impl step 9
